--- a/package.json
+++ b/package.json
@@ -11,22 +11,30 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.7",
+    "@types/dotenv": "^6.1.1",
+    "@types/mongodb": "^4.0.6",
+    "dotenv": "^16.5.0",
+    "mongodb": "^6.16.0",
     "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "tailwindcss": "^4.1.7"
+    "react-dom": "^19.1.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
+    "@tailwindcss/postcss": "^4.1.8",
+    "@types/autoprefixer": "^9.7.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
     "@types/typescript": "^0.4.29",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-react": "^4.4.1",
+    "autoprefixer": "^10.4.21",
     "eslint": "^9.27.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
     "globals": "^16.0.0",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^4.1.8",
     "typescript": "^5.8.3",
     "vite": "^6.3.5"
   }
