--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,8 @@
     "@tailwindcss/vite": "^4.1.7",
     "@types/dotenv": "^6.1.1",
     "@types/mongodb": "^4.0.6",
+    "date-holidays": "^3.24.3",
+    "date-holidays-parser": "^3.4.7",
     "dotenv": "^16.5.0",
     "mongodb": "^6.16.0",
     "react": "^19.1.0",
@@ -31,6 +33,7 @@
     "@typescript-eslint/parser": "^8.32.1",
     "@vitejs/plugin-react": "^4.4.1",
     "autoprefixer": "^10.4.21",
+    "daisyui": "^5.0.40",
     "eslint": "^9.27.0",
     "eslint-plugin-react-hooks": "^5.2.0",
     "eslint-plugin-react-refresh": "^0.4.19",
