--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.7",
     "@types/dotenv": "^6.1.1",
     "@types/mongodb": "^4.0.6",
@@ -19,6 +20,7 @@
     "mongodb": "^6.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.7",
     "ts-node": "^10.9.2"
@@ -29,6 +31,7 @@
     "@types/autoprefixer": "^9.7.2",
     "@types/react": "^19.1.2",
     "@types/react-dom": "^19.1.2",
+    "@types/react-places-autocomplete": "^7.2.14",
     "@types/typescript": "^0.4.29",
     "@typescript-eslint/eslint-plugin": "^8.32.1",
     "@typescript-eslint/parser": "^8.32.1",
