--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "mongodb": "^6.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-places-autocomplete": "^7.3.0",
     "react-router-dom": "^7.6.1",
     "tailwindcss": "^4.1.7",
