--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@googlemaps/extended-component-library": "^0.6.14",
+    "@headlessui/react": "^2.2.4",
+    "@heroicons/react": "^2.2.0",
     "@react-google-maps/api": "^2.20.6",
     "@tailwindcss/vite": "^4.1.7",
     "@types/dotenv": "^6.1.1",
@@ -18,6 +20,7 @@
     "date-holidays": "^3.24.3",
     "date-holidays-parser": "^3.4.7",
     "dotenv": "^16.5.0",
+    "headlessui": "^0.0.0",
     "mongodb": "^6.16.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
